--- a/Challenge04LGBB/NextPage.storyboard
+++ b/Challenge04LGBB/NextPage.storyboard
@@ -24,7 +24,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="left" id="ov7-Ng-TMg">
+                <swipeGestureRecognizer direction="right" id="ov7-Ng-TMg">
                     <connections>
                         <action selector="SwipeRight:" destination="Y6W-OH-hqX" id="BAb-mN-tsw"/>
                     </connections>
