Adicionando nova main para merge

--- a/Challenge04LGBB/Base.lproj/Transition.storyboard
+++ b/Challenge04LGBB/Base.lproj/Transition.storyboard
@@ -11,7 +11,7 @@
         <!--First Page-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="Main" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="FirstPage" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Transition" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="FirstPage" customModule="Challenge04LGBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
